# cmake-project-creator

./: .gitmodules  CMakeLists.txt
include/: parse_args.h  templates.h  templates.h.in
src/: main.c  parse_args.c
templates/: CMakeLists.txt
